--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,20 +9,20 @@ environment:
     RUST_CHANNEL: stable
     LLVM_TARGET: win64
 
-  - TARGET: i686-pc-windows-msvc
-    VCPKG_TARGET: x86-windows-static
-    RUST_CHANNEL: stable
-    LLVM_TARGET: win32
+#   - TARGET: i686-pc-windows-msvc
+#     VCPKG_TARGET: x86-windows-static
+#     RUST_CHANNEL: stable
+#     LLVM_TARGET: win32
 
   - TARGET: x86_64-pc-windows-msvc
     VCPKG_TARGET: x64-windows-static
     RUST_CHANNEL: nightly
     LLVM_TARGET: win64
 
-  - TARGET: i686-pc-windows-msvc
-    VCPKG_TARGET: x86-windows-static
-    RUST_CHANNEL: nightly
-    LLVM_TARGET: win32
+#   - TARGET: i686-pc-windows-msvc
+#     VCPKG_TARGET: x86-windows-static
+#     RUST_CHANNEL: nightly
+#     LLVM_TARGET: win32
 
 install:
   - ps: |
