--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,16 @@ install:
     cd ..
   - export PKG_CONFIG_PATH=$HOME/installed_libsodium/lib/pkgconfig:$PKG_CONFIG_PATH
   - export LD_LIBRARY_PATH=$HOME/installed_libsodium/lib:$LD_LIBRARY_PATH
+  - export RUSTFLAGS=-Ctarget-feature=+crt-static
 script:
   - cargo build --verbose --release
   - cargo test --verbose
 
 
 before_deploy:
-  - export TRAVIS_TAG="1.0.$TRAVIS_BUILD_NUMBER"
+  - export TRAVIS_TAG="1.0.$TRAVIS_BUILD_NUMBER-$(date +'%Y%m%d%H%M%S')"
   - echo "$TRAVIS_TAG" "$TRAVIS_COMMIT"
   - git tag "$TRAVIS_TAG" "$TRAVIS_COMMIT"
-  - ls -R *
   
 deploy:
   provider: releases
